--- a/wagtail_tuto/blog/templates/blog/post_page.html
+++ b/wagtail_tuto/blog/templates/blog/post_page.html
@@ -26,7 +26,12 @@
 
     {% post_tags_list %}
 
+    <p>
+        &nbsp;
+    </p>
+    {% comment %}
     {% show_comments %}
+    {% endcomment %}
 
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
